--- a/package.json
+++ b/package.json
@@ -1,80 +1,77 @@
 {
-    "name": "formql",
-    "version": "0.4.0",
-    "description": "FormQL - A framework for building dynamic forms",
-    "license": "MIT",
-    "author": "Juan Stoppa",
-    "homepage": "https://formql.io",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
-        "test": "jest",
-        "lint": "ng lint",
-        "e2e": "ng e2e",
-        "npm_build_library": "ng build formql --prod",
-        "npm_pack_library": "cd dist/formql && npm pack",
-        "npm_prepare_library_formql_pack": "ng build formql --prod && cd dist/formql && npm pack",
-        "npm_prepare_library_formql_editor_pack": "ng build formql-editor --prod && cd dist/formql-editor && npm pack",
-        "npm_prepare_library_formql_material_pack": "ng build formql-material --prod && cd dist/formql-material && npm pack",
-        "npm_prepare_library_formql": "ng build formql --prod && cd dist/formql && npm publish",
-        "npm_prepare_library_formql_editor": "ng build formql-editor --prod && cd dist/formql-editor && npm publish",
-        "npm_prepare_library_formql_material": "ng build formql-material --prod && cd dist/formql-material && npm publish",
-        "package_all": "npm run npm_prepare_library_formql_pack && npm run npm_prepare_library_formql_editor_pack && npm run npm_prepare_library_formql_material_pack && npm install @formql/core && npm install @formql/editor && npm install @formql/material",
-        "package_and_publish_all": "npm run npm_prepare_library_formql && npm run npm_prepare_library_formql_editor && npm run npm_prepare_library_formql_material"
-    },
-    "jest": {
-        "preset": "jest-preset-angular",
-        "setupTestFrameworkScriptFile": "<rootDir>/setupJest.ts",
-        "globals": {
-            "ts-jest": {
-                "diagnostics": false
-            }
-        }
-    },
-    "dependencies": {
-        "@angular/animations": "~8.2.4",
-        "@angular/cdk": "~8.1.4",
-        "@angular/common": "~8.2.4",
-        "@angular/compiler": "~8.2.4",
-        "@angular/core": "~8.2.4",
-        "@angular/forms": "~8.2.4",
-        "@angular/material": "~8.1.4",
-        "@angular/platform-browser": "~8.2.4",
-        "@angular/platform-browser-dynamic": "~8.2.4",
-        "@angular/router": "~8.2.4",
-        "@formql/core": "0.4.0",
-        "@formql/editor": "0.4.0",
-        "@formql/material": "0.4.0",
-        "angular2-text-mask": "^9.0.0",
-        "angular2-uuid": "^1.1.1",
-        "classlist.js": "^1.1.20150312",
-        "core-js": "^2.5.4",
-        "rxjs": "~6.3.3",
-        "text-mask-addons": "^3.8.0",
-        "web-animations-js": "^2.3.1",
-        "zone.js": "^0.8.26"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "^0.803.2",
-        "@angular-devkit/build-ng-packagr": "~0.803.2",
-        "@angular/cli": "~8.3.2",
-        "@angular/compiler-cli": "~8.2.4",
-        "@angular/language-service": "~8.2.4",
-        "@types/jest": "^24.0.13",
-        "@types/node": "~8.9.4",
-        "codelyzer": "~4.5.0",
-        "cypress": "^3.4.1",
-        "jasmine-core": "~2.99.1",
-        "jasmine-spec-reporter": "~4.2.1",
-        "jest": "^24.8.0",
-        "jest-preset-angular": "^7.1.1",
-        "lerna": "^3.13.1",
-        "ng-packagr": "~5.0.1",
-        "protractor": "~5.4.0",
-        "ts-node": "~7.0.0",
-        "tsickle": "~0.34.3",
-        "tslint": "~5.11.0",
-        "typescript": "~3.4.5"
-    }
+  "name": "formql",
+  "version": "0.0.0-development",
+  "description": "FormQL - A framework for building dynamic forms",
+  "license": "MIT",
+  "author": "Juan Stoppa",
+  "homepage": "https://formql.io",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "jest",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "npm_build_library": "ng build formql --prod",
+    "npm_pack_library": "cd dist/formql && npm pack",
+    "npm_prepare_library_formql_pack": "ng build formql --prod && cd dist/formql && npm pack",
+    "npm_prepare_library_formql_editor_pack": "ng build formql-editor --prod && cd dist/formql-editor && npm pack",
+    "npm_prepare_library_formql_material_pack": "ng build formql-material --prod && cd dist/formql-material && npm pack",
+    "npm_prepare_library_formql": "ng build formql --prod && cd dist/formql && npm publish",
+    "npm_prepare_library_formql_editor": "ng build formql-editor --prod && cd dist/formql-editor && npm publish",
+    "npm_prepare_library_formql_material": "ng build formql-material --prod && cd dist/formql-material && npm publish",
+    "package_all": "npm run npm_prepare_library_formql_pack && npm run npm_prepare_library_formql_editor_pack && npm run npm_prepare_library_formql_material_pack && npm install @formql/core && npm install @formql/editor && npm install @formql/material",
+    "package_and_publish_all": "npm run npm_prepare_library_formql && npm run npm_prepare_library_formql_editor && npm run npm_prepare_library_formql_material",
+    "semantic-release": "semantic-release"
+  },
+  "dependencies": {
+    "@angular/animations": "~8.2.4",
+    "@angular/cdk": "~8.1.4",
+    "@angular/common": "~8.2.4",
+    "@angular/compiler": "~8.2.4",
+    "@angular/core": "~8.2.4",
+    "@angular/forms": "~8.2.4",
+    "@angular/material": "~8.1.4",
+    "@angular/platform-browser": "~8.2.4",
+    "@angular/platform-browser-dynamic": "~8.2.4",
+    "@angular/router": "~8.2.4",
+    "@formql/core": "0.4.0",
+    "@formql/editor": "0.4.0",
+    "@formql/material": "0.4.0",
+    "angular2-text-mask": "^9.0.0",
+    "angular2-uuid": "^1.1.1",
+    "classlist.js": "^1.1.20150312",
+    "core-js": "^2.5.4",
+    "rxjs": "~6.3.3",
+    "text-mask-addons": "^3.8.0",
+    "web-animations-js": "^2.3.1",
+    "zone.js": "^0.8.26"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^0.803.2",
+    "@angular-devkit/build-ng-packagr": "~0.803.2",
+    "@angular/cli": "~8.3.2",
+    "@angular/compiler-cli": "~8.2.4",
+    "@angular/language-service": "~8.2.4",
+    "@types/jest": "^24.0.18",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~4.5.0",
+    "cypress": "^3.4.1",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "jest": "^24.8.0",
+    "jest-preset-angular": "^7.1.1",
+    "lerna": "^3.13.1",
+    "ng-packagr": "~5.0.1",
+    "protractor": "~5.4.0",
+    "semantic-release": "^15.13.24",
+    "ts-node": "~7.0.0",
+    "tsickle": "~0.34.3",
+    "tslint": "~5.11.0",
+    "typescript": "~3.4.5"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/formql/formql.git"
+  }
 }
